# pini-

./: .gitignore  CONTRIBUTING.md  PiniPlanner.spec  README.md  fix_pini_tests.py  fix_pini_tests_v2.py  pyproject.toml  requirements_freeze.txt
.github/workflows/: ci.yml
apps/desktop/: main.py
docs/: DESKTOP_FOUNDATION.md  OPTIMIZER_ENGINE.md  ROADMAP.md  RULE_ENGINE.md  SPRINT_10_PROJECT_VALIDATION.md  SPRINT_11_BASIC_SCHEDULER.md  SPRINT_12_SCHEDULE_VIEWS.md  SPRINT_13_EXCEL_EXPORT.md  SPRINT_14_PDF_EXPORT.md  SPRINT_15_DYNAMIC_RULES.md  SPRINT_16_RULE_AWARE_SCHEDULER.md  SPRINT_17_SCHEDULER_ENGINE_ARCHITECTURE.md  SPRINT_18_INTEGRATED_MAIN_WINDOW.md  SPRINT_19_ORTOOLS_ENGINE.md  SPRINT_20_STABILITY_FIX.md  SPRINT_21_EXCEL_IMPORT.md  SPRINT_22_ADVANCED_EXCEL_IMPORT.md  SPRINT_23_DYNAMIC_RULES_EXCEL_IMPORT.md  SPRINT_24_BACKUP_RESTORE.md  SPRINT_25_INTEGRATED_BACKUP_MENU.md  SPRINT_26_CENTER_WIZARD.md  SPRINT_27_SCHOOL_TEMPLATES.md  SPRINT_28_INTEGRATED_SCHOOL_TEMPLATES.md  SPRINT_29_SELF_CHECK_REPAIR.md  SPRINT_30_2.md  SPRINT_30_3.md  SPRINT_30_4.md  SPRINT_30_5.md  SPRINT_30_6.md  SPRINT_30_7.md  SPRINT_31_1_LOCAL_SEARCH.md  SPRINT_31_2_SIMULATED_ANNEALING.md  SPRINT_31_3_TABU_SEARCH.md  SPRINT_31_4_GENETIC_OPTIMIZER.md  SPRINT_32_1_SUBSTITUTIONS.md  SPRINT_32_2_SUBSTITUTIONS_PINI_DATA.md  SPRINT_32_3_SUBSTITUTIONS_UI.md  SPRINT_32_4_MULTI_PERIOD_SUBSTITUTIONS.md  SPRINT_32_5_MULTI_PERIOD_SUBSTITUTIONS_UI.md  SPRINT_32_6_SUBSTITUTION_REGISTRY.md  (+55 more)
scripts/: build.release.ps1  build_installer.ps1  clean.release.ps1  verify.release.ps1  verify_release.ps1
(+301 files in other folders)
