[project]
name = "pini"
version = "0.1.0"
description = "Pini: planificación y generación de horarios escolares"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "ortools>=9.10.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = [
    "apps/desktop",
    "packages/core",
    "packages/rule_engine",
    "packages/scheduler",
    "packages/persistence"
]
testpaths = ["tests"]
